# newgen-erp-macro

./: .gitignore  README.md  analyze_basic_tab.py  build.bat  bulk_dependent_input.py  employee_input.py  gui_app.py  gui_app.spec  main.py  message_monitor.py  pyproject.toml  test.py  test_config.example.json  test_copy_methods.py
archive/: click_dependency_tab.py  find_tab_text.py  inspect_tabs.py  log.txt  main_to_file.py  result.txt  select_tab.py  test.py  test_employee_input_with_monitoring.py  test_installment.py  test_with_spy.py
archive/docs/: 01-window-architecture.md  13-sensitive-data-management.md  14-excel-based-automation.md  15-installment-dialog-discovery.md
archive/examples/: README.md
archive/test/: __init__.py  capture.py  control_tree.txt  employee_input_log_20251030_121431.txt  message_log_20251030_120443.txt
archive/test_data/: 연말정산.xls
archive/test_scripts/: check_header.py  installment_automation.py  installment_automation_debug.py  installment_automation_debug2.py  installment_automation_debug3.py  read_excel.py  (+6 more)
docs/: 09-automation-guide.md  11-background-copy-issue.md  12-resident-number-investigation.md  background-copy-issue.md  bulk-input-implementation.md  development-guide.md  employee-input.md  overview.md  spy-realtime-monitoring.md  successful-method.md  tab-automation.md  testing-framework.md  testing-strategy.md
src/: advanced_message_monitor.py  csv_reader.py  employee_input.py  excel_loader.py  hotkey_manager.py  input_handler.py  installment_automation.py  spread_controller.py  tab_automation.py
test/: config.py
(+120 files in other folders)
