[project]
name = "newgen-erp-macro"
version = "0.1.0"
description = "연말정산추가자료입력 프로그램 자동화"
authors = [
    {name = "손기령", email = "giryeong@kodebox.io"}
]
requires-python = ">=3.10"
dependencies = [
    "pywinauto>=0.6.8",
    "mss>=9.0.0",
    "Pillow>=10.0.0",
    "pywin32>=306",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
